crates/liminal-server/tests/trybuild/production_connection_fate_cannot_select_process_killed.rs
use liminal_server::server::participant::ConnectionFateClass;

fn production_binding_emitter(class: ConnectionFateClass) -> bool {
    matches!(class, ConnectionFateClass::ProcessKilled)
}

fn main() {
    let _ = production_binding_emitter;
}
